Fix tab sharing icon overlay alignment
See #273

--- a/chrome/tabbar/tabbar.css
+++ b/chrome/tabbar/tabbar.css
@@ -354,6 +354,11 @@
 	margin-inline-start: -16px !important;
 }
 
+.tab-sharing-icon-overlay
+{
+	margin-inline-start: -16px !important;
+}
+
 @keyframes rotate-360
 {
 	0% { transform: rotate(0); }
